fix: fixed lane spacing

--- a/components/cores/description-card/description-card.module.scss
+++ b/components/cores/description-card/description-card.module.scss
@@ -36,5 +36,6 @@
     font-weight: normal;
     margin-top: 8px;
     color: #292c30;
+    line-height: 1.75;
   }
 }
