--- a/components/cores/medium-card/medium-card.module.scss
+++ b/components/cores/medium-card/medium-card.module.scss
@@ -24,6 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    line-height: normal;
 
     @media (min-width: 1300px) {
       height: calc(55% - 48px);
