--- a/components/modules/description-slider/description-slider.module.scss
+++ b/components/modules/description-slider/description-slider.module.scss
@@ -13,6 +13,8 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 5%;
+    line-height: 1.75;
+
     color: #292c30;
     font-size: 16px;
     svg {
@@ -32,6 +34,7 @@
     margin-right: 20px;
     display: flex;
     justify-content: space-between;
+
     @media (max-width: 960px) {
       flex-direction: column;
     }
@@ -79,8 +82,8 @@
       width: 100%;
       margin-left: 0;
     }
-    @media (max-width: 1150px) and (min-width: 960px) {
-      height: 460px;
+    @media (max-width: 1180px) and (min-width: 960px) {
+      height: 475px;
     }
     .arrows {
       span {
